test/sema/ambiguous-init-call-with-overloaded-params.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct Foo { }
Foo::init(int a) { }
Foo::init(int b) { }

func main() {
    // CHECK: 9:9: error: ambiguous reference to 'Foo.init'
    _ = Foo(1)
}
